# sie_asymptotic

./: README.md  pyproject.toml
docs/: conf.py  index.rst  sieasymptotic.rst  sieasymptotic.solver.rst
src/sieasymptotic/: __init__.py
src/sieasymptotic/fisher/: fim.py  test_fisher_information_matrix.ipynb
src/sieasymptotic/geom/: geometry.py
src/sieasymptotic/profile/: profile.py
src/sieasymptotic/solver/: __init__.py  lenstronomy_vs_asymptotic_expansion.ipynb  solve_image_positions.py  solve_image_positions_semianalytic.py  test_solver.ipynb
src/sieasymptotic/utils/: __init__.py  conversions.py  cosmology.py  geometry.py  parameter_mapping.py
tests/: asymptotic_vs_lenstronomy_solver.py
